--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "node-example",
+  "name": "coolnodeapp",
   "version": "1.0.0",
-  "description": "This example is so cool.",
-  "main": "index.html",
+  "description": "node app ",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "example",
-    "heroku"
-  ],
-  "author": "jane-doe",
-  "license": "MIT"
+  "start": "node app.js"
+},
+  "repository": {
+  "type": "git",
+  "url": ""
+},
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+  "url": ""
+},
+  "homepage": ""
 }
